# rinex-reader

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yaml
src/: examples.py  main.py  reader.py
src/common/: __init__.py  rinex_data.py
src/gnss/: __init__.py
src/navigation/v3/: header.py  navigation.py
src/navigation/v4/: header.py  navigation.py
src/nmbu/rinex/: reader.py
src/observation/v3/: header.py  header_v3.py  obs3.py  obs_v3.py  observation.py
src/observation/v4/: header.py  observation.py
src/tests/: __init__.py  test_reader_pytest.py
src/tests/common/: test_common_functions_pytest.py  test_rinex_data_support_functions_pytest.py
src/tests/navigation/: test_nav_header_pytest.py  test_navigation_v3_pytest.py  test_navigation_v4_pytest.py
src/tests/observation/: test_obs_header_pytest.py  test_observation_v3_pytest.py  test_observation_v4_pytest.py
src/tests/resources/: header_v3.22p  (+7 more)
tests/: test_reader_pytest.py
tests/common/: test_common_functions_pytest.py  test_rinex_data_support_functions_pytest.py
tests/navigation/: test_nav_header_pytest.py  test_navigation_v3_pytest.py  test_navigation_v4_pytest.py
tests/observation/: test_obs_header_pytest.py  test_observation_v3_pytest.py  test_observation_v4_pytest.py
tests/resources/: header_v3.22o  header_v3.22p  header_v4.22o  navigation_v3.04.22p  navigation_v3.22p  navigation_v3_invalid.22p  navigation_v4.22p  navigation_v4_invalid.22p  observation_v3.22o  observation_v3_single_sv.22o  observation_v4.22o  observation_v4_single_sv.22o
(+65 files in other folders)
